# site-analyser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE.md  Dockerfile  Dockerfile.rhel  PACKAGE_CONVERSION.md  PLAYWRIGHT_TROUBLESHOOTING.md  README.md  check-redirects.py  convert_existing_data.py  debug_filename_matching.py  env.example  example-config.json  install-linux-dependencies.sh  install-playwright-corporate.sh  install-playwright-dnf.sh  load_to_database.py  main.py  manage_active_records.py  pyproject.toml  pytest.ini  run_migration.py  simple_site_checker.py  test-openai-proxy.py  test_baml_integration.py  test_baml_processors_only.py  test_company_extraction.py  test_complete_baml_integration.py
baml_src/: main.baml
database/: schema.sql
docs/: ARCHITECTURE.md  BOT_EVASION.md  CLI.md  CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
k8s/: README.md  configmap.yaml  cronjob.yaml  job.yaml  namespace.yaml  secret.yaml
preprocessing/: README.md  __init__.py  __main__.py  agno_tools.py  bot_detector.py  cli.py  content_extractor.py  models.py  scraper.py  scraper_original.py  ssl_checker.py  tools.py
scripts/: simple_site_checker.py  upload_preprocessing_results.py
site_analyser/: __init__.py  main.py
test-auto-job-id/: 0b639bb4-59b6-4189-a809-dde234443910_www_mtdvat_com_ae984905_html.html
test-full-workflow/: test-workflow-123_www_bridgeitmtd_co_uk_b8781de5_html.html  test-workflow-123_www_mtdvat_com_ae984905_html.html
test-job-id/: test-uuid-123_www_bridgeitmtd_co_uk_b8781de5_html.html
tests/: __init__.py  conftest.py
(+55 files in other folders)
