[project]
name = "site-analyser"
version = "0.1.0"
description = "Automated website analysis pipeline for compliance and trademark monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "structlog>=23.2.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.1.0",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
site-analyser = "site_analyser.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
